--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ border-radius: 50%;}
 float: right;
 border: none;
   color: white;
-  font-size: 15px;
+  font-size: 20px;
   border-radius:25px;
   }
 .xyz{
@@ -189,16 +189,16 @@ border: none;
         <h4><b>Know your new home</b></h4>
         <div class="card-body">
       <ul class="list-group">
-    <li class="list-group-item lstcol">House Keeping <button class=" bnleft" style="background-color: #4CAF50;">Daily</button></li>
-    <li class="list-group-item lstcol">Owner Stays at property<button class=" bnleft" style="background-color: #4CAF50;">No</button></li>
+    <li class="list-group-item lstcol" style="height: 100px">House Keeping <button class=" bnleft" style="background-color: #4CAF50;">Daily</button></li>
+    <li class="list-group-item lstcol"style="height: 100px">Owner Stays at property<button class=" bnleft" style="background-color: #4CAF50;">No</button></li>
     <span id="dots1">...</span><span id="more1">
-    <li class="list-group-item lstcol">Common Areas<button class=" bnleft" style="background-color: #4CAF50;">YES</button></li>
-    <li class="list-group-item lstcol">Non-Veg Allowed<button class=" bnleft" style="background-color: #4CAF50;">YES</button></li>
-    <li class="list-group-item lstcol">Visiters Allowed<button class=" bnleft" style="background-color: #4CAF50;">No</button></li>
-    <li class="list-group-item lstcol">Drinking and Smoking Allowed<button class=" bnleft" style="background-color: #4CAF50;">No</button></li>
-    <li class="list-group-item lstcol">Total Beds<button class=" bnleft" style="background-color: #4CAF50;">20</button></li>
-  <li class="list-group-item lstcol">Max. bed in a room<button class=" bnleft" style="background-color: #4CAF50;">No</button></li>
-<li class="list-group-item lstcol">Landmarks Nearby<button class="bn5" > Near Bengali Sweet </button></li></span>
+    <li class="list-group-item lstcol"style="height: 100px">Common Areas<button class=" bnleft" style="background-color: #4CAF50;">YES</button></li>
+    <li class="list-group-item lstcol"style="height: 100px">Non-Veg Allowed<button class=" bnleft" style="background-color: #4CAF50;">YES</button></li>
+    <li class="list-group-item lstcol"style="height: 100px">Visiters Allowed<button class=" bnleft" style="background-color: #4CAF50;">No</button></li>
+    <li class="list-group-item lstcol"style="height: 100px">Drinking and Smoking Allowed<button class=" bnleft" style="background-color: #4CAF50;">No</button></li>
+    <li class="list-group-item lstcol" style="height: 100px">Total Beds<button class=" bnleft" style="background-color: #4CAF50;">20</button></li>
+  <li class="list-group-item lstcol"style="height: 100px">Max. bed in a room<button class=" bnleft" style="background-color: #4CAF50;">No</button></li>
+<li class="list-group-item lstcol" style="height: 120px">Landmarks Nearby<button class="bn5" > Near Bengali Sweet </button></li></span>
 <br>
     <b><a style="color: red" onclick="myFunction1()" id="myBtn1"><b>Read more</b></a></b>
   </ul>
@@ -278,8 +278,9 @@ We never charge any Brokerage from anyone.</p>
 </div>
 <div class="jumbotron text-center" style="margin-bottom:0; font-size: 20px;">
   <h2><strong>Devoloped By</strong></h2>
-  <p>My Name: Arkaprava De</p>
-  <p>My gmail:<a href="arkapravade99@gmail.com"> arkapravade99@gmail.com</a>  </p>
+  <strong><p>My Name: Arkaprava De</p>
+  <p>My gmail:<a type="Email"> arkapravade99@gmail.com</a>  </p></strong>
+  <p style="font-size: 15px;"> As per your requirement, this web page is fully mobile responsive</p>
 </div>
 </footer>
 
